# img2BVH

./: .gitignore  LICENSE  NOTICE  README.md  build.ps1  fix_shoulder.py  pyproject.toml  run.bat  run.sh
image2bvh/: __init__.py  __main__.py  bootstrap.py  bvh_export.py  bvh_writer.py  config.py  gradio_app.py  hand_inference.py  paths.py  pose.py  segmentation.py  vram.py
packaging/: image2bvh.spec  pyinstaller_runtime_hook.py
packaging/installer/: image2bvh.iss
packaging/templates/: README.en.txt  README.txt
